css/style.css
/* ... */
.grp-interval > input[type="radio"]:checked + label,
.grp-interval > input[type="radio"] + label:hover {
	border-bottom: 2px solid rgba(6, 133, 201, 1);
}

.amount-input {
	width: 50px;
	margin: 0 !important;
	padding: 0;
	color: rgba(31, 31, 31, 0.7);
	background-color: rgba(0, 0, 0, 0);
	border: none;
	transition: color .3s ease;
}

input[type="radio"]:checked + label > .amount-input,
input[type="radio"] + label:hover > .amount-input {
	color: rgba(255, 255, 255, 1);
}





/* OTHER */

.hidden {
	display: none !important;
	margin: 0 !important;
}

.noselect {
	-webkit-touch-callout: none !important;
	-webkit-user-select: none !important;
	-moz-user-select: none !important;
	-ms-user-select: none !important;
	user-select: none !important;
}

p.center,
div.center > p {
	text-align: center;
}

.small {
	font-size: 80%;
}

.border {
	padding: 1rem;
	border: 3px solid rgba(31, 31, 31, 0.7);
	border-radius: 2px;
}





/* SPONSORING */

#packages {
	text-align: center;
}

#packages > a {
	display: block;
	color: inherit;
	border: none;
}

#packages > a:hover {
	border: none;
}

#packages .column {
	margin-top: 1.5em;
	padding-top: 2em;
	padding-bottom: 1.5em;
	background-color: #fff;
	border-bottom: 2px solid rgba(255, 67, 142, 0);
	border-radius: 2px;
	transition: all 0.3s ease;
}

#packages .column:hover {
	border-bottom: 2px solid rgba(255, 67, 142, 1);
	transform: translateY(-0.8em);
}

#packages .amount,
#supporters .amount {
	font-weight: bold;
	font-size: 1.4rem;
}

#packages .amount {
	margin-top: 1em;
}

#packages .amount::after,
#supporters .amount::after {
	content: "€";
	margin-left: 0.2em;
}

#packages ul {
	margin: 0.5rem 0 auto;
}

#packages li {
	margin: 0.4rem;
	list-style: none;
}

#packages li::before {
	content: "➤";
	margin-right: 0.2em;
	vertical-align: bottom;
	font-weight: bold;
}





/* SUPPORTERS */

#supporters > div {
	margin-top: 2rem;
	cursor: move;
}

#supporters .box {
	display: block;
	position: relative;
	min-width: 200px;
	max-width: 240px;
	padding: 1rem 0.5rem;
	text-align: center;
	color: inherit;
	background-color: #EEE;
	border: none;
	border-radius: 2px;
}

#supporters .box:hover {
	border: none;
}

@media screen and (min-width: 768px) {
	#supporters .box {
		max-width: 300px;
		padding: 1.5rem 1rem;
	}
}

#supporters h5 {
	width: 100%;
	padding: .2rem .5rem .5rem;
	color: inherit;
}

#supporters img {
	height: 40px;
	width: auto;
	max-width: 100%;
	margin: auto;
}

#supporters .amount {
	width: 100%;
	padding: .2rem;
}

#supporters p {
	margin: 1rem 0;
	padding: 0 1rem;
	font-size: 85%;
}

